improved schema collection